# celery_fastapi

./: .gitignore  README.md  alembic.ini  docker-compose copy.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.db
alembic/: env.py
app/: __init__.py  main.py
app/alembic/: env.py
app/alembic/versions/: a32d7a74541d_.py
app/project/: celery_utils.py  database.py
app/project/users/: __init__.py  models.py
compose/local/fastapi/: Dockerfile  entrypoint
project/: __init__.py  celery_utils.py  config.py  database.py  logging.py
project/users/: __init__.py  factories.py  models.py  schemas.py  tasks.py  views.py
project/users/templates/: form.html
project/ws/: __init__.py  views.py
scripts/: db-setup.sh
tests/: conftest.py
tests/users/: test_tasks.py  test_views.py
