[tool.poetry]
name = "celery-fastapi"
version = "0.1.0"
description = ""
authors = ["MatthieuLeNozach <matthieu.le.nozach@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
celery = "^5.4.0"
uvicorn = "^0.30.1"
redis = "^5.0.5"
pre-commit = "^3.7.1"
ruff = "^0.4.8"
loguru = "^0.7.2"
flower = "^2.0.1"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
watchfiles = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
